@@ -1,3 +1,8 @@
+2000-05-03  Laurent Pautet  <pautet@inf.enst.fr>
+
+	* s-gardfs.adb, s-gardfs.ads: Add a field Lock in DFS_Data_Type
+	and use new package System.Global_Locks.
+
 2000-04-30  Laurent Pautet  <pautet@inf.enst.fr>
 
 	* s-gardfs.adb, s-garsto.adb: Get rid of GNAT.Task_Lock because it 
